syntax = "proto3";
option go_package = "github.com/pranjalsaxena10/gRPC-protobuf/protobuf/golang_examples;protob";

message SimpleMessage {
    int32 id = 1;
    bool isPresent = 2;
    string messageName = 3;
    repeated int32 list = 4;
}